<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PinCloud</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="create_group">Create a new Bulletin Board...</string>
    <string name="memo_link">MemoLink</string>

    <color name="white_color">#ffff</color>
    <color name="babyblue_color">#00bddf</color>

    <string name="memoimage_text">MemoLink Logo</string>
    <string name="empty_text">Awfully quiet here! You should join some groups!</string>
    <string name="join_group">Join a Bulletin Board</string>
    <string name="button_boards">Bulletin Boards...</string>
    <string name="button_register">Sign up!</string>
    <string name="button_login">Log in</string>

    <color name="red_color">#ff2727</color>
    <color name="yellow_color">#ecff1e</color>

    <string name="title_activity_login_page">Login Page</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_activity_register">ActivityRegister</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="register_message">Signing up is easy! Enter the information below so we can get you started.</string>
    <string name="mail_box">Example: memo@link.com</string>
    <string name="register_mail">E-Mail:</string>
    <string name="register_username">Username:</string>
    <string name="username_box">Example: John Smith</string>
    <string name="register_password">Password:</string>
    <string name="button_signup">Sign Up!</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="login_text">Login</string>
    <string name="login_username">Username:</string>
    <string name="logout">Log out</string>
    <string name="rememberme">Remember me</string>
    <string name="new_pin">Add a new pin</string>
    <string name="default_text">No Pin groups yet!</string>
    <string name="pin_group">Pin Groups</string>
    <string name="title_activity_add_pin">AddPin</string>
    <string name="pin_title">Title:</string>
    <string name="hint_pinTitle">e.g. Project at 11/12</string>
    <string name="hint_pinMessage">Turn in the software project at 11/12 at 1 AM.</string>
    <string name="pin_message">Message:</string>
    <string name="time">Set duration:</string>
    <string name="hint_pinDuration">e.g. 1 day</string>
    <string name="btnPinCreate">Create Pin!</string>

    <string-array name="pinDurationArray">
        <item>None</item>
        <item>1 Day</item>
        <item>2 Days</item>
        <item>3 Days</item>
        <item>4 Days</item>
        <item>5 Days</item>
        <item>6 Days</item>
        <item>7 Days</item>
    </string-array>

    <string name="pinDurationText">How long should your Pin last?</string>
    <string name="repeat_password">Repeat Password:</string>
    <string name="btn_placePin">Place Pin</string>
    <string name="title_activity_pin_content">PinContentActivity</string>
    <string name="delete_pin">Delete pin</string>

</resources>
