<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/babyblue_color"
    tools:context=".AddPin" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pin_title"
        android:textColor="@color/white_color"
        android:textSize="20sp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="50dp" />
    <EditText
        android:id="@+id/pinTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:background="@color/white_color"
        android:hint="@string/hint_pinTitle"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pin_message"
        android:textColor="@color/white_color"
        android:textSize="20sp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="7dp" />
    <EditText
        android:id="@+id/pinMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:background="@color/white_color"
        android:hint="@string/hint_pinMessage"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:textColor="@color/white_color"
        android:textSize="20sp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="7dp" />
    <Spinner
        android:id="@+id/pinDuration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:entries="@array/pinDurationArray"
        android:prompt="@string/pinDurationText"
        android:background="@color/white_color"
        />
    <Button
        android:id="@+id/btnPinCreate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_standard"
        android:text="@string/btnPinCreate"
        android:onClick="btnCreatePin"
        android:textColor="@color/white_color"
        />

</LinearLayout>
