<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    		android:layout_width="fill_parent"
    		android:layout_height="fill_parent"
    		android:fillViewport="true" >
   	<LinearLayout
    	android:layout_width="fill_parent"
   		android:layout_height="wrap_content"
    	android:background="@color/babyblue_color"
   		android:orientation="vertical" >
    
    <!--  <TextView
        android:text="@string/register_message"
        android:textColor="@color/white_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="22sp"
        android:layout_marginBottom="25dp"
        android:background="@color/red_color"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        />-->
    <TextView 
        android:text="@string/register_mail"
        android:textColor="@color/white_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:paddingBottom="10dp"
        android:layout_marginTop ="50dp"
        android:layout_marginLeft="50dp"
        />
    <EditText android:id="@+id/mail_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mail_box"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:background="@color/white_color"
        android:paddingBottom="7dp"
        android:paddingTop="7dp"
        />
    <TextView
        android:text="@string/register_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/white_color"
        android:paddingBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="50dp"
		/>
    <EditText android:id="@+id/username_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username_box"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:background="@color/white_color"
        android:paddingBottom="7dp"
        android:paddingTop="7dp"
        />
    <TextView
        android:text="@string/register_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/white_color"
        android:paddingBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="50dp"
		/>
    <EditText android:id="@+id/password_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:background="@color/white_color"
        android:paddingBottom="7dp"
        android:paddingTop="7dp"
        android:inputType="textPassword"
        />
        <TextView
        android:text="@string/repeat_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/white_color"
        android:paddingBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="50dp"
		/>
    <EditText android:id="@+id/ValidationPassword_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:background="@color/white_color"
        android:paddingBottom="7dp"
        android:paddingTop="7dp"
        android:inputType="textPassword"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_signup"
        android:textColor="@color/white_color"
        android:textSize="25sp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_standard"
        android:onClick="btnRegister"/>
</LinearLayout>
</ScrollView>