<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/babyblue_color"
    android:orientation="vertical" >

    <ImageView
        android:src="@drawable/logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:contentDescription="@string/memoimage_text"
        android:layout_marginBottom="40dp"
         />
	<Button
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:text="@string/button_login"
        android:layout_gravity="center"
        android:background="@drawable/button_standard"
       	android:layout_marginBottom="20dp"
       	android:textColor="@color/white_color"
       	android:textSize="20sp"
       	android:onClick="redirectLogin"/>
    <Button
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/button_register"
        android:background="@drawable/button_standard"
        android:textColor="@color/white_color"
        android:textSize="20sp"
        android:onClick="redirectRegister" />
</LinearLayout>