<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/babyblue_color" >

    
    
    <!--  <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_text"
        android:background="@color/red_color"
        android:gravity="center"
        android:textSize="25sp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:textColor="@color/white_color"
        android:layout_marginBottom="25dp" />-->
    
    <TextView 
        android:text="@string/login_username"
        android:textColor="@color/white_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:paddingBottom="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="50dp"
        />
    <EditText android:id="@+id/mailIn_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mail_box"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:background="@color/white_color"
        android:paddingBottom="7dp"
        android:paddingTop="7dp"
        />

    <TextView
        android:text="@string/register_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/white_color"
        android:paddingBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="50dp"
		/>
    <EditText android:id="@+id/passwordIn_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:background="@color/white_color"
        android:paddingBottom="7dp"
        android:paddingTop="7dp"
        android:inputType="textPassword"
        />
    <CheckBox 
        android:id="@+id/rememberme"
        android:layout_marginTop="25dp"
        android:textColor="@color/white_color"
        android:layout_gravity="center"
        android:text="@string/rememberme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_text"
        android:textColor="@color/white_color"
        android:textSize="25sp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_standard"
        android:onClick="loginEvent"/>
    <TextView
        android:id="@+id/tv"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
		android:textColor="@color/red_color"
		android:text="" 
		android:gravity="center"/>

</LinearLayout>
